--- a/src/themes/mikus-blog/partials/sidebar.htm
+++ b/src/themes/mikus-blog/partials/sidebar.htm
@@ -1,6 +1,6 @@
 <div :class="sidebarOpen ? 'block' : 'hidden'" @click="sidebarOpen = false" class="fixed z-20 inset-0 bg-black opacity-50 transition-opacity lg:hidden"></div>
 
-<div style="min-width: 250px" :class="sidebarOpen ? 'translate-x-0 ease-out duration-300' : '-translate-x-full ease-in'" class="fixed z-30 inset-y-0 left-0 w-64 transition transform bg-white shadow overflow-y-auto lg:translate-x-0 lg:static lg:inset-0">
+<div :class="sidebarOpen ? 'translate-x-0 ease-out duration-300' : '-translate-x-full ease-in'" class="fixed z-30 inset-y-0 left-0 w-64 transition transform bg-white shadow overflow-y-auto lg:translate-x-0 lg:left-auto">
 	<div class="flex items-center justify-center mt-8">
 		<div class="flex flex-col items-center">
 			<a href="{{ 'home'|page }}">
