--- a/src/plugins/rainlab/blog/components/post/default.htm
+++ b/src/plugins/rainlab/blog/components/post/default.htm
@@ -1,9 +1,9 @@
 {% set post = __SELF__.post %}
 
-<div class="content">{{ post.content_html|raw }}</div>
+<div class="">{{ post.content_html|raw }}</div>
 
 {% if post.featured_images.count %}
-    <div class="featured-images text-center">
+    <div class="text-center">
         {% for image in post.featured_images %}
             <p>
                 <img
@@ -16,7 +16,7 @@
     </div>
 {% endif %}
 
-<p class="info">
+<p class="">
     Posted
     {% if post.categories.count %} in
         {% for category in post.categories %}
