--- a/src/themes/mikus-blog/layouts/default.htm
+++ b/src/themes/mikus-blog/layouts/default.htm
@@ -47,7 +47,8 @@ categoryPage = "blog/tag"
 		{% endif %}
 
 		<link rel="stylesheet" href="{{ 'assets/public/css/app.css'|theme }}">
-    {% styles %}
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+		{% styles %}
   </head>
 	<body class="h-full overflow-y-auto bg-gray-200" x-data="{ sidebarOpen: false }">
 		
