--- a/src/themes/mikus-blog/partials/header.htm
+++ b/src/themes/mikus-blog/partials/header.htm
@@ -1,4 +1,4 @@
-<button @click="sidebarOpen = true" class="p-4 text-gray-500 focus:outline-none lg:hidden">
+<button @click="sidebarOpen = true" class="pl-4 pt-4 focus:outline-none lg:hidden">
 	<svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 		<path d="M4 6H20M4 12H20M4 18H11" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
 	</svg>
