--- a/src/themes/mikus-blog/partials/sidebar.htm
+++ b/src/themes/mikus-blog/partials/sidebar.htm
@@ -18,7 +18,7 @@
 			{% for btn in this.theme.social_buttons %}
 
 			<li>
-				<a class="fa-{{ btn.fa }}" href="{{ btn.href }}" style="background-color: {{ btn.color }};"></a>
+				<a target="_blank" class="fa-{{ btn.fa }} pt-px text-xl text-white w-8 h-8 inline-block text-center no-underline rounded-full" href="{{ btn.href }}" style="background-color: {{ btn.color }};"></a>
 			</li>
 
 			{% endfor %}
@@ -27,13 +27,13 @@
 
 		<div class="mt-2 px-4 ">
 
-			<div>
+			<div class="mb-4">
 				<p class="text-gray-600">{{ this.theme.whoami }}</p>
 			</div>
 
 			<hr class="my-2">
 
-			<div class="mt-4">
+			<div class="my-4">
 				<h3>Categories</h3>
 
 				<ul class="mt-2">
