disable post sharing

--- a/src/themes/mikus-blog/partials/blogPostsListRaw.htm
+++ b/src/themes/mikus-blog/partials/blogPostsListRaw.htm
@@ -1,6 +1,6 @@
 {% for post in blogPosts.posts %}
 
-  <article class="shadow bg-white my-4 p-4" itemscope itemtype="http://schema.org/BlogPosting">
+  <article class="rounded shadow bg-white my-4 p-4" itemscope itemtype="http://schema.org/BlogPosting">
 
     <h2 class="font-medium">
       <a href="{{ post.url }}" itemprop="url">
