--- a/src/themes/mikus-blog/partials/sidebar.htm
+++ b/src/themes/mikus-blog/partials/sidebar.htm
@@ -1,6 +1,6 @@
 <div :class="sidebarOpen ? 'block' : 'hidden'" @click="sidebarOpen = false" class="fixed z-20 inset-0 bg-black opacity-50 transition-opacity lg:hidden"></div>
 
-<div :class="sidebarOpen ? 'translate-x-0 ease-out duration-300' : '-translate-x-full ease-in'" class="fixed z-30 inset-y-0 left-0 w-64 transition transform bg-white shadow overflow-y-auto lg:translate-x-0 lg:left-auto">
+<div :class="sidebarOpen ? 'translate-x-0 ease-out duration-300' : '-translate-x-full ease-in'" class="flex flex-col fixed z-30 inset-y-0 left-0 w-64 transition transform bg-white shadow overflow-y-auto lg:translate-x-0 lg:left-auto">
 	<div class="flex items-center justify-center mt-8">
 		<div class="flex flex-col items-center">
 			<a href="{{ 'home'|page }}">
@@ -9,64 +9,78 @@
 		</div>
 	</div>
 
-	<div class="mt-4 flex flex-col justify-center items-center text-center">
+	<div class="mt-4 flex flex-1 flex-col justify-center items-center text-center">
 
-		<h2>{{ this.theme.name }}</h2>
+		<div class="flex flex-1 flex-col justify-between">
 
-		<ul class="">
+			<div class="flex-1">
+				<h2>{{ this.theme.name }}</h2>
 
-			{% for btn in this.theme.social_buttons %}
+				<ul class="">
 
-			<li>
-				<a target="_blank" class="fa-{{ btn.fa }} pt-px text-xl text-white w-8 h-8 inline-block text-center no-underline rounded-full" href="{{ btn.href }}" style="background-color: {{ btn.color }};"></a>
-			</li>
-
-			{% endfor %}
-
-		</ul>
-
-		<div class="mt-2 px-4 ">
-
-			<div class="mb-4">
-				<p class="text-gray-600">{{ this.theme.whoami }}</p>
-			</div>
-
-			<hr class="my-2">
-
-			<div class="my-4">
-				<h3>Categories</h3>
-
-				<ul class="mt-2">
-					{% for category in blogCategories.categories %}
-
-					<li><a href="{{ category.url }}"><span>{{ category.post_count }}</span> {{ category.name }}</a></li>
-
-					{% endfor %}
-				</ul>
-			</div>
-
-			<hr class="my-2">
-
-			<div class="mt-4">
-				<h3>Recent Posts</h3>
-
-				<ul class="text-gray-600 mt-2">
-
-					{% for post in recentBlogPosts.posts %}
+					{% for btn in this.theme.social_buttons %}
 
 					<li>
-						<h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-						{{ post.published_at|date('M d, Y') }}
+						<a target="_blank" class="fa-{{ btn.fa }} pt-px text-xl text-white w-8 h-8 inline-block text-center no-underline rounded-full" href="{{ btn.href }}" style="background-color: {{ btn.color }};"></a>
 					</li>
 
 					{% endfor %}
 
 				</ul>
+
+				<div class="mt-2 px-4 ">
+
+					<div class="mb-4">
+						<p class="text-gray-600">{{ this.theme.whoami }}</p>
+					</div>
+
+					<hr class="my-2">
+
+					<div class="my-4">
+						<h3>Categories</h3>
+
+						<ul class="mt-2">
+							{% for category in blogCategories.categories %}
+
+							<li><a href="{{ category.url }}"><span>{{ category.post_count }}</span> {{ category.name }}</a></li>
+
+							{% endfor %}
+						</ul>
+					</div>
+
+					<hr class="my-2">
+
+					<div class="mt-4">
+						<h3>Recent Posts</h3>
+
+						<ul class="text-gray-600 mt-2">
+
+							{% for post in recentBlogPosts.posts %}
+
+							<li>
+								<h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+								{{ post.published_at|date('M d, Y') }}
+							</li>
+
+							{% endfor %}
+
+						</ul>
+					</div>
+
+				</div>
 			</div>
 
+			{% if this.theme.contact %}
+			<div>
+				<hr class=my-2>
+				<div class="py-4">
+					<a href="mailto:{{this.theme.contact}}">Contact me</a>
+				</div>
+			</div>
+			{% endif %}
+			
 		</div>
+		
 	</div>
 
-	<nav class="mt-10">
-	</nav>
 </div>
