--- a/src/themes/mikus-blog/partials/blog/blogPostsList.htm
+++ b/src/themes/mikus-blog/partials/blog/blogPostsList.htm
@@ -1,8 +1,6 @@
 <section class="">
 
-  <h1 class="">{{ this.page.title }}</h1>
-
-  {% partial 'blogPostsListRaw' %}
+	{% partial 'blog/blogPostsListRaw' %}
 
   {% set posts = blogPosts.posts %}
 
