--- a/src/themes/mikus-blog/partials/header.htm
+++ b/src/themes/mikus-blog/partials/header.htm
@@ -1,5 +1,16 @@
-<button @click="sidebarOpen = true" class="pl-4 pt-4 focus:outline-none lg:hidden">
-	<svg class="h-6 w-6" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-		<path d="M4 6H20M4 12H20M4 18H11" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-	</svg>
-</button>
+<header class="w-full px-6 py-8 h-32 z-10 flex flex-col sm:flex-row justify-between sm:items-center">
+	<div class="">
+		<a class="no-underline text-black font-bold text-2xl" href="{{ 'home'|page }}">
+			{{ this.theme.short_name }}
+		</a>
+	</div>
+	<div class="flex items-center sm:justify-end flex-1">
+		<div class="">
+		</div>
+		<div class="sm:ml-2">
+			<a class="link link-gray text-lg font-medium" href="{{ 'blog'|page }}">
+				BLOG
+			</a>
+		</div>
+	</div>
+</header>
