--- a/src/themes/mikus-blog/layouts/blank.htm
+++ b/src/themes/mikus-blog/layouts/blank.htm
@@ -40,7 +40,7 @@ description = "Default layout"
 
 		<div class="mx-auto h-full flex flex-col" >
 
-			<div class="flex flex-col flex-1 w-full px-6">
+			<div class="flex flex-col flex-1 w-full">
 				{% page %}
 			</div>
 			
