--- a/src/themes/mikus-blog/partials/header.htm
+++ b/src/themes/mikus-blog/partials/header.htm
@@ -8,12 +8,12 @@
 		switch ($color) {
 
 			case "black":
-				$this['logo_css'] = "text-black";
+				$this['logo_css'] = "link link-black";
 				$this['link_css'] = "link-black";
 				break;
 				
 			case "white":
-				$this['logo_css'] = "text-white";
+				$this['logo_css'] = "link link-white";
 				$this['link_css'] = "link-white";
 				break;
 				
@@ -22,7 +22,7 @@
 	}
 ?>
 ==
-<header class="w-full block px-6 md:px-12 py-8 h-32 z-10 flex flex-col sm:flex-row justify-between sm:items-center">
+<header class="w-full block px-6 md:px-12 py-8 z-10 flex flex-col sm:flex-row justify-between sm:items-center">
 	<div class="">
 		<a class="no-underline {{ logo_css }} font-bold text-4xl" href="{{ 'home'|page }}">
 			{{ this.theme.short_name }}
