--- a/src/themes/mikus-blog/partials/projects/projectListRaw.htm
+++ b/src/themes/mikus-blog/partials/projects/projectListRaw.htm
@@ -5,31 +5,34 @@
 <div class="flex flex-row flex-wrap">
 	{% for project in projectList.records %}
 
-	<article class="my-4 md:even:pl-2 md:odd:pr-2 w-full md:w-1/2">
+	<article class="mt-4 lg:even:pl-2 lg:odd:pr-2 w-full lg:w-1/2">
 
-		<div class="bg-white shadow">
-			<div class="w-full h-64">
-				{% if project.thumbnail %}
-				<img
-					class="w-full h-full"
-					data-src="{{ project.thumbnail }}"
-										src="/storage/app/media/{{ project.thumbnail }}"
-										alt="{{ project.title }}"
-										style="max-width: 100%" />
-				{% else %}
-				<div class="bg-gray-500 w-full h-full"></div>
-				{% endif %}
-			</div>
+		<a class="link-blank" href="{{ detailsPage|page({ slug: project.slug }) }}">
+			<div class="bg-white shadow">
 
-			<div class="py-2 px-4">
-				<h2 class="font-medium">
-					<a class="link" href="{{ detailsPage|page({ slug: project.slug }) }}">
+				<div class="w-full overflow-hidden">
+					{% if project.thumbnail %}
+					<div class="relative bg-gray-500 pb-2/3 transition ease-in-out duration-500 transform hover:-translate-y-1 hover:scale-110">
+						<img
+							class="absolute w-full h-full"
+										 data-src="{{ project.thumbnail }}"
+										 src="/storage/app/media/{{ project.thumbnail }}"
+										 alt="{{ project.title }}"
+										 style="max-width: 100%" />
+					</div>
+					{% else %}
+					<div class="bg-gray-500 w-full h-full"></div>
+					{% endif %}
+				</div>
+
+				<div class="py-2 px-4">
+					<h2 class="font-medium">
 						<span itemprop="headline">{{ project.title }}</span>
-					</a>
-				</h2>
-				<p class="text-gray-500" itemprop="description">{{ project.short_description }}</p>
+					</h2>
+					<p class="text-gray-500" itemprop="description">{{ project.short_description }}</p>
+				</div>
 			</div>
-		</div>
+		</a>
 		
 	</article>
 
