--- a/src/themes/mikus-blog/layouts/default.htm
+++ b/src/themes/mikus-blog/layouts/default.htm
@@ -47,7 +47,7 @@ description = "Default layout"
 
 			<div class="flex flex-col flex-1 w-full px-6 md:px-12">
 
-				<div class="py-8">
+				<div class="my-8">
 					{% page %}
 				</div>
 				
