--- a/src/themes/mikus-blog/layouts/blank.htm
+++ b/src/themes/mikus-blog/layouts/blank.htm
@@ -40,9 +40,9 @@ description = "Default layout"
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		{% styles %}
   </head>
-	<body class="h-full overflow-y-auto bg-gray-200">
+	<body class="h-full overflow-y-auto bg-gray-100">
 
-		<div class="mx-auto h-full flex flex-col" >
+		<div class="mx-auto h-full" >
 
 			<div>
 				{% page %}
