--- a/src/themes/mikus-blog/partials/projects/projectListRaw.htm
+++ b/src/themes/mikus-blog/partials/projects/projectListRaw.htm
@@ -8,7 +8,7 @@
 	<article class="mt-4 lg:even:pl-2 lg:odd:pr-2 w-full lg:w-1/2">
 
 		<a class="link-blank" href="{{ detailsPage|page({ slug: project.slug }) }}">
-			<div class="bg-white shadow">
+			<div class="bg-white shadow-md">
 
 				<div class="w-full overflow-hidden">
 					{% if project.thumbnail %}
