--- a/src/themes/mikus-blog/partials/blog/blogPostsListRaw.htm
+++ b/src/themes/mikus-blog/partials/blog/blogPostsListRaw.htm
@@ -7,7 +7,7 @@
 ==
 {% for post in blogPosts.posts %}
 
-  <article class="rounded shadow bg-white my-4 py-4 px-8" itemscope itemtype="http://schema.org/BlogPosting">
+  <article class="rounded shadow-md bg-white my-4 py-4 px-8" itemscope itemtype="http://schema.org/BlogPosting">
 
     <h3 class="font-bold">
       <a class="link link-black" href="{{ post.url }}" itemprop="url">
