--- a/src/themes/mikus-blog/layouts/default.htm
+++ b/src/themes/mikus-blog/layouts/default.htm
@@ -42,26 +42,27 @@ description = "Default layout"
   </head>
 	<body class="h-full overflow-y-auto bg-gray-200">
 
-		<div style="max-width: 1400px" class="mx-auto h-full flex flex-col" >
+		<div style="max-width: 1400px" class="mx-auto h-full" >
+
 			{% partial 'header' %}
 
-			<div class="flex flex-col flex-1 w-full px-6 md:px-12">
+			<div class="w-full px-6 py-8 md:px-12">
 
-				<div class="my-8">
+				<div>
 					{% page %}
 				</div>
 				
-				<footer>
-					<ul class="">
-						{% for btn in this.theme.social_buttons %}
+				<!-- <footer>
+						 <ul class="">
+						 {% for btn in this.theme.social_buttons %}
 
-						<li>
-							<a target="_blank" class="fa-{{ btn.fa }} pt-px text-xl text-white w-8 h-8 inline-block text-center no-underline rounded-full" href="{{ btn.href }}" style="background-color: {{ btn.color }};"></a>
-						</li>
+						 <li>
+						 <a target="_blank" class="fa-{{ btn.fa }} pt-px text-xl text-white w-8 h-8 inline-block text-center no-underline rounded-full" href="{{ btn.href }}" style="background-color: {{ btn.color }};"></a>
+						 </li>
 
-						{% endfor %}
-					</ul>
-				</footer>
+						 {% endfor %}
+						 </ul>
+						 </footer> -->
 			</div>
 			
 			<script src="{{ 'assets/public/js/app.js'|theme }}"></script>
