--- a/src/themes/mikus-blog/layouts/default.htm
+++ b/src/themes/mikus-blog/layouts/default.htm
@@ -48,7 +48,7 @@ description = "Default layout"
 
 			<div class="w-full px-6 py-8 md:px-12">
 
-				<div>
+				<div class="flex flex-col">
 					{% page %}
 				</div>
 				
