--- a/src/themes/mikus-blog/layouts/default.htm
+++ b/src/themes/mikus-blog/layouts/default.htm
@@ -46,7 +46,7 @@ description = "Default layout"
 
 			{% partial 'header' %}
 
-			<div class="w-full px-6 py-4 md:px-12">
+			<div class="w-full px-6 pt-4 pb-12 md:px-12">
 
 				<div class="flex flex-col">
 					{% page %}
