--- a/src/themes/mikus-blog/partials/projects/projectListRaw.htm
+++ b/src/themes/mikus-blog/partials/projects/projectListRaw.htm
@@ -5,10 +5,10 @@
 <div class="flex flex-row flex-wrap">
 	{% for project in projectList.records %}
 
-	<article class="mt-4 sm:even:pl-2 sm:odd:pr-2 first:pl-0 last:pr-0 lg:px-2 w-full sm:w-1/2 lg:w-1/4 first:pl-0">
+	<article class="mt-4 sm:even:pl-2 sm:odd:pr-2 first:pl-0 last:pr-0 lg:px-2 w-full sm:w-1/2 lg:w-1/4">
 
-		<a class="link-blank" href="{{ detailsPage|page({ slug: project.slug }) }}">
-			<div class="bg-white shadow-md">
+		<a class="link-blank block h-full" href="{{ detailsPage|page({ slug: project.slug }) }}">
+			<div class="bg-white shadow-md h-full flex flex-col">
 
 				<div class="w-full overflow-hidden">
 					{% if project.thumbnail %}
@@ -25,7 +25,7 @@
 					{% endif %}
 				</div>
 
-				<div class="py-2 px-4">
+				<div class="py-2 px-4 border-t-2 flex-1 flex flex-col justify-center">
 					<h2 class="font-medium">
 						<span itemprop="headline">{{ project.title }}</span>
 					</h2>
