--- a/src/themes/mikus-blog/partials/projects/projectListRaw.htm
+++ b/src/themes/mikus-blog/partials/projects/projectListRaw.htm
@@ -2,13 +2,13 @@
 {% set detailsKeyColumn = projectList.detailsKeyColumn %}
 {% set detailsUrlParameter = projectList.detailsUrlParameter %}
 
-<div class="flex flex-row flex-wrap">
+<div class="flex flex-row flex-wrap xl:-mx-2">
 	{% for project in projectList.records %}
 
-	<article class="mt-4 sm:even:pl-2 sm:odd:pr-2 first:pl-0 last:pr-0 lg:px-2 w-full sm:w-1/2 lg:w-1/4">
+	<article class="mt-4  sm:even:pl-2 sm:odd:pr-2 xl:px-2 w-full sm:w-1/2 xl:w-1/4">
 
-		<a class="link-blank block h-full" href="{{ detailsPage|page({ slug: project.slug }) }}">
-			<div class="bg-white shadow-md h-full flex flex-col">
+		<a class="link-blank block" href="{{ detailsPage|page({ slug: project.slug }) }}">
+			<div class="bg-white shadow-md">
 
 				<div class="w-full overflow-hidden">
 					{% if project.thumbnail %}
@@ -25,10 +25,10 @@
 					{% endif %}
 				</div>
 
-				<div class="py-2 px-4 border-t-2 flex-1 flex flex-col justify-center">
-					<h2 class="font-medium">
+				<div class="py-2 px-4 border-t-2">
+					<h3 class="font-medium">
 						<span itemprop="headline">{{ project.title }}</span>
-					</h2>
+					</h3>
 					<p class="text-gray-500" itemprop="description">{{ project.short_description }}</p>
 				</div>
 			</div>
