--- a/src/themes/mikus-blog/layouts/blank.htm
+++ b/src/themes/mikus-blog/layouts/blank.htm
@@ -3,6 +3,14 @@ description = "Default layout"
 <!DOCTYPE html>
 <html class="h-full" lang="{{ this.theme.meta_lang }}">
   <head>
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-5ZD6S68');</script>
+		<!-- End Google Tag Manager -->
+		
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -41,6 +49,10 @@ description = "Default layout"
 		{% styles %}
   </head>
 	<body class="h-full overflow-y-auto bg-gray-200">
+		<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5ZD6S68"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 
 		<div class="mx-auto h-full" >
 
